refactor: remove manual schduler trigger, use cron placeholder and simplify info/event-mappers